--- a/papers/Rashba/bib.bib
+++ b/papers/Rashba/bib.bib
@@ -3057,4 +3057,18 @@ year = {2008}
     edition = {2nd Edition},
     publisher = {Elsevier},
     url = {http://ci.nii.ac.jp/ncid/BA20776995}
+
+@article{Lee2003,
+abstract = {A number of experimental and computational studies of materials have shown that transport rates in domain walls may significantly differ from those in the bulk. One possible explanation for enhanced transport in a domain wall is that the domain wall is elastically soft with respect to the bulk. We investigate the softening of a ferroelastic domain wall in a simple, generic model. We calculate saddle point energies of solute atoms in the bulk and domain wall, using a geometry such that variation in the saddle point energy cannot be attributed to the structural differences of the bulk and the wall, but must instead be attributed to softening of the wall. Our results show a reduction of the saddle point energy in the wall, thus indicating that, in this model at least, domain walls are elastically soft compared with the bulk. A simple analysis based on an Einstein model allows us to explain the observed softening of the wall.},
+author = {Lee, W. T. and Salje, E. K.H. and Bismayer, U.},
+doi = {10.1088/0953-8984/15/8/318},
+file = {:home/ponet/Documents/Mendeley Desktop/W{\_}T{\_}Lee{\_}2003{\_}J.{\_}Phys.{\_}{\_}Condens.{\_}Matter{\_}15{\_}318.pdf:pdf},
+issn = {09538984},
+journal = {J. Phys. Condens. Matter},
+number = {8},
+pages = {1353--1366},
+title = {{Domain wall diffusion and domain wall softening}},
+volume = {15},
+year = {2003}
+}
 }
