--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -16,7 +16,7 @@ When more conducting DWs are present, current will flow more easily through the 
 This fact can be exploited to efficiently store and read information.
 A lot of research has been focused on the functionality that DWs present, but less is known about their mechanical properties.
 It has been shown that ferroelectric-ferroelastic (ferroelastic walls separate domains with differing strain textures) DWs can be moved by applying stress \cite{Schneider2001}.
-While the influence of stress on these ferroelectric-ferroelastic DWs has been investigated theoretically \cite{Sal, it 
+While the influence of stress on these ferroelectric-ferroelastic DWs has been investigated theoretically \cite{Lee2003}, it 
 \lp{maybe some more examples etc?}
 
 % From the fundamental point of view, they offer a nanoscale region in which there is a sharp change in the microscopic configuration of the system.
