--- a/papers/Softening/bib.bib
+++ b/papers/Softening/bib.bib
@@ -793,3 +793,13 @@ volume = {480},
 year = {2001}
 }
 
+@article{Lu2012,
+author = {Lu, Haidong and Bark, C.-W. and de los Ojos, D. Esque and Universitat, J. Alcala and Eom, Chang-Beom and Catalan, G. and Gruverman, Alexei and Th},
+file = {:home/ponet/Downloads/fulltext.pdf:pdf},
+journal = {Alexei Gruverman Publications},
+mendeley-groups = {PhD Thesis/Softening},
+number = {56},
+title = {{Mechanical Writing of Ferroelectric Polarization}},
+year = {2012}
+}
+
