--- a/papers/Softening/bib.bib
+++ b/papers/Softening/bib.bib
@@ -803,3 +803,73 @@ title = {{Mechanical Writing of Ferroelectric Polarization}},
 year = {2012}
 }
 
+@article{Rabe2000,
+abstract = {The systematic replacement of hydrogen by fluorine atoms in disilane (Si2H6) is investigated using density functional theory (DFT). For every molecule in the Si2H6-xFx family, with 0≤x≤6, we find the energetically most favorable configurations. Properties such as chemical potential, chemical hardness, polarizability, electrophilicity and the infrared vibration modes and frequencies are evaluated and analyzed in terms of the fluorine substitution. The molecular response to twisting the silyl groups at each end of the Si-Si axis, relative to each other, is also investigated. A consistent picture emerges which is in good agreement with the available experimental results. {\textcopyright} 2003 Elsevier Science B.V. All rights reserved.},
+author = {Rabe, U. and Amelio, S. and Kester, E. and Scherer, V. and Hirsekorn, S. and Arnold, W.},
+doi = {10.1016/S0041-624X(99)00207-3},
+file = {:home/ponet/Documents/Mendeley Desktop/s0041-624x(99)00207-3.pdf:pdf},
+isbn = {4968193025},
+issn = {0041624X},
+journal = {Ultrasonics},
+keywords = {acoustics,atomic force microscopy,beams,contact sti ff ness,flexural vibrations,s modulus,ultrasonics,young},
+mendeley-groups = {PhD Thesis/Softening},
+month = {mar},
+number = {1-8},
+pages = {430--437},
+title = {{Quantitative determination of contact stiffness using atomic force acoustic microscopy}},
+url = {https://linkinghub.elsevier.com/retrieve/pii/S0009261403005219 https://linkinghub.elsevier.com/retrieve/pii/S0041624X99002073},
+volume = {38},
+year = {2000}
+}
+
+@article{Cordero-Edwards2017,
+abstract = {The mechanical properties of materials are insensitive to space inversion, even when they are crystallographically asymmetric. In practice, this means that turning a piezoelectric crystal upside down or switching the polarization of a ferroelectric should not change its mechanical response. Strain gradients, however, introduce an additional source of asymmetry that has mechanical consequences. Using nanoindentation and contact-resonance force microscopy, this study demonstrates that the mechanical response to indentation of a uniaxial ferroelectric (LiNbO3) does change when its polarity is switched, and use this mechanical asymmetry both to quantify its flexoelectricity and to mechanically read the sign of its ferroelectric domains.},
+author = {Cordero-Edwards, Kumara and Domingo, Neus and Abdollahi, Amir and Sort, Jordi and Catalan, Gustau},
+doi = {10.1002/adma.201702210},
+file = {:home/ponet/Documents/Mendeley Desktop/adma.201702210.pdf:pdf},
+issn = {15214095},
+journal = {Adv. Mater.},
+keywords = {ferroelectric memories,ferroelectricity,flexoelectricity,mechanical properties,mechanical reading polarity},
+mendeley-groups = {PhD Thesis/Softening},
+number = {37},
+pages = {1--6},
+pmid = {28730658},
+title = {{Ferroelectrics as Smart Mechanical Materials}},
+volume = {29},
+year = {2017}
+}
+
+@article{Cordero-Edwards2019,
+abstract = {The propagation front of a crack generates large strain gradients and it is therefore a strong source of gradient-induced polarization (flexoelectricity). Herein, we demonstrate that, in piezoelectric materials, a consequence of flexoelectricity is that crack propagation is helped or hindered depending on whether it is parallel or antiparallel to the piezoelectric polar axis. The discovery of crack propagation asymmetry proves that fracture physics cannot be assumed to be symmetric in polar materials, and indicates that flexoelectricity should be incorporated in any realistic model.},
+author = {Cordero-Edwards, Kumara and Kianirad, Hoda and Canalias, Carlota and Sort, Jordi and Catalan, Gustau},
+doi = {10.1103/PhysRevLett.122.135502},
+file = {:home/ponet/Documents/Mendeley Desktop/flexoferro.pdf:pdf},
+issn = {10797114},
+journal = {Phys. Rev. Lett.},
+keywords = {doi:10.1103/PhysRevLett.122.135502 url:https://doi.org/10.1103/PhysRevLett.122.135502},
+mendeley-groups = {PhD Thesis/Softening},
+number = {13},
+pages = {135502},
+pmid = {31012630},
+publisher = {American Physical Society},
+title = {{Flexoelectric Fracture-Ratchet Effect in Ferroelectrics}},
+url = {https://doi.org/10.1103/PhysRevLett.122.135502},
+volume = {122},
+year = {2019}
+}
+
+@article{Abdollahi2015,
+abstract = {Cracks generate the largest strain gradients that any material can withstand. Flexoelectricity (coupling between strain gradient and polarization) must therefore play an important role in fracture physics. Here we use a self-consistent continuum model to evidence two consequences of flexoelectricity in fracture: the resistance to fracture increases as structural size decreases, and it becomes asymmetric with respect to the sign of polarization. The latter phenomenon manifests itself in a range of intermediate sizes where piezo- and flexoelectricity compete. In BaTiO3 at room temperature, this range spans from 0.1 to 50 nm, a typical thickness range for epitaxial ferroelectric thin films.},
+author = {Abdollahi, Amir and Peco, Christian and Mill{\'{a}}n, Daniel and Arroyo, Marino and Catalan, Gustau and Arias, Irene},
+doi = {10.1103/PhysRevB.92.094101},
+file = {:home/ponet/Documents/Mendeley Desktop/PhysRevB.92.094101.pdf:pdf},
+issn = {1550235X},
+journal = {Phys. Rev. B - Condens. Matter Mater. Phys.},
+mendeley-groups = {PhD Thesis/Softening},
+number = {9},
+pages = {25--27},
+title = {{Fracture toughening and toughness asymmetry induced by flexoelectricity}},
+volume = {92},
+year = {2015}
+}
+
