--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -67,7 +67,7 @@ The free energy density written in terms of primary order parameter $P$ and asso
 &&f_{q}=-\frac{1}{2}q_{ijkl}\varepsilon_{ij}P_{k}P_{l},\label{eq:qpp}\\
 &&f_{fl}=\frac{1}{2}f_{ijkl}(\varepsilon_{ij}\partial_k P_l - P_i\partial_j\varepsilon_{kl}),
 \end{eqnarray}
-where the indices run through ${x,y,z}$, and there is a summation over repeated indices.
+where the indices run through ${x,y,z}$, and a summation is performed over the repeated ones.
 The first term is the Landau free energy for a uniform ferroelectic polarization, where terms up to sixth order have to included to bound $P$, since in BTO both $\alpha_{ij}$ and $\alpha_{ijkl}$ are negative below the transition temperature.
 The second term denotes the Ginzburg part, i.e. the energy penalty for spatial variations of the polarization.
 This term influences the width of DWs, where a larger $G$ leads to smaller walls and vice versa.
